# ACCV-Lab

./: .clang-format  .gitignore  .gitmodules  CONTRIBUTING.MD  README.md  THIRD_PARTY_LICENSES.md  namespace_packages_config.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: blossom-ci.yml
build_config/: __init__.py  pyproject.toml  setup.py
build_config/accvlab_build_config/: __init__.py
build_config/accvlab_build_config/helpers/: __init__.py  build_utils.py  cmake_args.py
build_config/tests/: test_cuda_arch_selection.py
docker/: Dockerfile  run_docker_build.sh
docs/: .gitignore  Makefile  NAMESPACE_PACKAGE_DOCS_GUIDE.txt  SHARED_CONFIG_GUIDE.txt  conf.py  generate_new_namespace_package_docs.py  generate_package_docs_assets.py  guides_index.rst  index.rst  mirror_referenced_dirs.py  requirements.txt  spelling_wordlist.txt  sync_root_readme_for_docs.py  update_docs_index.py
docs/_ext/: markdown_note_admonitions.py  module_docstring.py  note_literalinclude.py
docs/contained_package_docs_mirror/: .gitignore  IMPORTANT.txt
docs/guides/: CONTRIBUTION_GUIDE.md  DEVELOPMENT_GUIDE.md  DOCKER_GUIDE.md  DOCUMENTATION_SETUP_GUIDE.md  FORMATTING_GUIDE.md  INSTALLATION_GUIDE.md
docs/project_overview/: .gitignore  IMPORTANT.txt
scripts/: build_docs.sh  debug_lane_helpers_cuda.py  debug_lane_helpers_cuda.sh  format.sh  install_local.sh  package_manager.sh  run_debug_lane_helpers_ci.sh  run_tests.sh
scripts/formatting/: black_format_package.sh  black_format_subpackage.sh  clang_format_package.sh  (+2 more)
(+1 files in other folders)
