# Tool configurations only - package metadata handled by individual package setup.py files
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 110
target-version = ['py38', 'py39', 'py310', 'py311']
include = '\.pyi?$'
skip_string_normalization = true
preview = true
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | demos
)/
''' 
